<resources>
    <string name="app_name">Popular Movies Stage 2</string>
    <string name="action_settings1">Sort by Ratings</string>
    <string name="action_settings2">Sort by Popularity</string>
    <string name="action_settings3">Show Favorites</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="user_rating_activity_detail">Rating</string>
    <string name="release_date_activity_detail">Release date</string>
    <string name="rating_end">/10</string>
    <string name="trailer">Watch the Trailer</string>
    <string name="reviews">Reviews:</string>
</resources>
