<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_detail">


        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/movieposterbg_iv"
            android:layout_width="130dp"
            android:layout_height="185dp"
            android:layout_marginLeft="21dp"
            android:layout_marginStart="21dp"
            android:background="#fafafa"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/movieposter_iv"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/movieposter_iv"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="108dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/releasedate_tv"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="left"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="@+id/releasedate_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/releasedate_label"
            app:layout_constraintTop_toBottomOf="@+id/releasedate_label" />

        <TextView
            android:id="@+id/releasedate_label"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:gravity="left"
            android:text="@string/release_date_activity_detail"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/rating_label"
            app:layout_constraintTop_toTopOf="@+id/rating_label" />

        <TextView
            android:id="@+id/description_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="@+id/releasedate_label"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/movieposter_iv"
            app:layout_constraintTop_toBottomOf="@+id/movieposter_iv" />

        <TextView
            android:id="@+id/rating_tv"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintStart_toStartOf="@+id/rating_label"
            app:layout_constraintTop_toBottomOf="@+id/rating_label" />

        <TextView
            android:id="@+id/rating_label"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:text="@string/user_rating_activity_detail"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/movieposterbg_iv"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBackground" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_end"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/rating_tv"
            app:layout_constraintEnd_toEndOf="@+id/rating_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/rating_tv" />

        <GridView
            android:id="@+id/GvTrailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:numColumns="1"
            app:layout_constraintEnd_toEndOf="@+id/description_tv"
            app:layout_constraintHorizontal_bias="0.384"
            app:layout_constraintStart_toStartOf="@+id/description_tv"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/ic_launcher_background" />

        <ImageView
            android:id="@+id/IvFav"
            android:layout_width="36dp"
            android:layout_height="38dp"
            app:layout_constraintBottom_toBottomOf="@+id/movieposter_iv"
            app:layout_constraintEnd_toEndOf="@+id/releasedate_tv"
            app:layout_constraintStart_toStartOf="@+id/rating_tv"
            app:layout_constraintTop_toBottomOf="@+id/releasedate_tv"
            app:srcCompat="@drawable/ic_grade_black_24dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/trailer"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintStart_toStartOf="@+id/GvTrailer"
            app:layout_constraintTop_toBottomOf="@+id/description_tv" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reviews"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/GvTrailer" />

        <GridView
            android:id="@+id/GvReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/GvTrailer"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>